--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "boletera",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build --configuration production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "start:server": "ts-node --esm src/server/socket-server.ts",
-    "serve:ssr:BoleteraDSMFamilia": "node dist/boletera-dsmfamilia/server/server.mjs"
-  },
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "dev:ssr": "ng run BoleteraDSMFamilia:serve-ssr",
+  "serve:ssr": "node dist/boletera-dsmfamilia/server/server.mjs",
+  "build:ssr": "ng build && ng run BoleteraDSMFamilia:server"
+},
+
+    "engines": {
+  "node": "18.x"
+},
+
   "private": true,
   "dependencies": {
     "@angular/common": "^19.2.0",
